--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
 
     word-wrap: break-word;
     overflow-wrap: break-word;
+    
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin:0;
 }
 :not(body) {
     transition: 300ms;
